hard-gists/2de2e9a156fe619dbdad762fe1cf84e1/run.log
=== Docker Run Log for 2de2e9a156fe619dbdad762fe1cf84e1 ===
Started at: Mi 29. Okt 13:26:30 CET 2025

[2025-10-29 13:26:31] START: Running container for 2de2e9a156fe619dbdad762fe1cf84e1
[2025-10-29 13:26:31] SUCCESS: Container 07abd824a47ed7feb1c5ee29cf197f3e91fd4c21488d74a7022b961d7ae74b8b started for 2de2e9a156fe619dbdad762fe1cf84e1
=== Container logs for 2de2e9a156fe619dbdad762fe1cf84e1 ===
  File "/snippet.py", line 201
    print lasagne.layers.get_all_param_values(l_out)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2de2e9a156fe619dbdad762fe1cf84e1 ===
[2025-10-29 13:26:33] INFO: Container 07abd824a47ed7feb1c5ee29cf197f3e91fd4c21488d74a7022b961d7ae74b8b has stopped
